[gd_scene load_steps=7 format=3 uid="uid://w0o3kps7dkyi"]

[ext_resource type="Script" uid="uid://bos8fvstghvd" path="res://core/globals.gd" id="1_rpwkf"]
[ext_resource type="PackedScene" uid="uid://bnjanygn2bq5x" path="res://core/loading_screen.tscn" id="2_j5m2f"]

[sub_resource type="Animation" id="Animation_ius8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rpwkf"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j5m2f"]
resource_name = "outro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.79, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ktbyj"]
_data = {
&"RESET": SubResource("Animation_ius8h"),
&"intro": SubResource("Animation_rpwkf"),
&"outro": SubResource("Animation_j5m2f")
}

[node name="globals" type="Node"]
process_mode = 3
script = ExtResource("1_rpwkf")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Black" type="ColorRect" parent="HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Anim" type="AnimationPlayer" parent="HUD"]
libraries = {
&"": SubResource("AnimationLibrary_ktbyj")
}

[node name="loading_screen" parent="HUD" instance=ExtResource("2_j5m2f")]

[connection signal="animation_finished" from="HUD/Anim" to="." method="_on_anim_animation_finished"]
[connection signal="done" from="HUD/loading_screen" to="." method="_on_loading_screen_done"]
